# Autonix

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  COMPLIANCE.md  README.md  build.sh  check_coverage.sh  flake.nix  generate_codebeamer_artifacts.sh  run.sh  run_tests.sh
Core_API/: CMakeLists.txt
Core_API/include/: adaptive_cruise_controller.hpp  ego_vehicle.hpp  lane_change_controller.hpp  npc_vehicle.hpp  pedestrian.hpp  road_segment.hpp  traffic_light.hpp  traffic_logic.hpp  traffic_sign.hpp  types.hpp  xml_scenario_parser.hpp
Core_API/src/: adaptive_cruise_controller.cpp  ego_vehicle.cpp  lane_change_controller.cpp  npc_vehicle.cpp  pedestrian.cpp  road_segment.cpp  traffic_light.cpp  traffic_logic.cpp  traffic_sign.cpp  xml_scenario_parser.cpp
Core_API/tests/: test_acc.cpp  test_ego_physics.cpp  test_lane_change.cpp  test_npc_vehicle.cpp  test_pedestrian.cpp  test_road_segment.cpp  test_structs.cpp  test_traffic_light.cpp  test_traffic_logic.cpp
Perception/: CMakeLists.txt
Perception/include/: gap_analyzer.hpp  perception_filter.hpp  safe_distance_calculator.hpp
Perception/src/: gap_analyzer.cpp  perception_filter.cpp  safe_distance_calculator.cpp
Perception/tests/: test_distance_calculator.cpp  test_gap_analyzer.cpp  test_perception_filter.cpp
Plan/: implementation_plan.md
UI/: CMakeLists.txt
UI/include/: detection_overlay.hpp  diagnostic_logs.hpp  main_window.hpp  perspective_view.hpp  speed_limit_widget.hpp
UI/src/: detection_overlay.cpp  diagnostic_logs.cpp  main.cpp  main_window.cpp  perspective_view.cpp  speed_limit_widget.cpp
cmake/: AllBuild.cmake  ClangFormat.cmake  CompilerSettings.cmake  ZeroCheck.cmake
tests/: test_parser_errors.cpp  test_scenarios.cpp  test_scenarios.xml  test_simulation_integration.cpp  test_ui_unit.cpp  xml_scenario_parser.cpp  xml_scenario_parser.hpp
